@@ -1,3 +1,8 @@
+2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Make use of tooltip package to show url links. Load
+	TIP index and provide tooltip titles for tip links.
+
 2007-02-05  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl (tkchat::PasteDlg): Consider both selections, PRIMARY
